nav bar, layout in progress
bruh

--- a/GameDescriptionPage.html
+++ b/GameDescriptionPage.html
@@ -27,4 +27,23 @@
         
     </section>
 
+    <section class = "game-content">
+        <div class = "gameplay">
+            <iframe width= "720" height= "405"
+            src="https://www.youtube.com/embed/tgbNymZ7vqY"
+            frameborder="0">
+            </iframe> 
+        </div>
+        <div class = "screenshots">
+            <img src="images/prototype/Inkie.png" width= "720" height= "405">
+            <img src="images/prototype/Epic.png" width = "720" height= "405">
+        </div>
+        <div class = "features">
+            <h4>Nice camera movement</h4>
+        </div>
+        <div class = "gifs">
+            <img src="images/prototype/zero beating the shit out of the psycho guy.gif">
+        </div>
+    </section>
+
 </body>
