--- a/GameDescriptionPage.html
+++ b/GameDescriptionPage.html
@@ -38,11 +38,26 @@
             <img src="images/prototype/Inkie.png" width= "720" height= "405">
             <img src="images/prototype/Epic.png" width = "720" height= "405">
         </div>
-        <div class = "features">
-            <h4>Nice camera movement</h4>
-        </div>
-        <div class = "gifs">
-            <img src="images/prototype/zero beating the shit out of the psycho guy.gif">
+        <div class = "description">
+            <div class = "one-liner">
+                <p>Game Not too good sed</p>
+            </div>
+            <div class = "features">
+                <table>
+                    <tr>
+                        <thead>
+                            <th>Features</th>
+                            <th>description</th>
+                            <th>Representation</th>
+                        </thead>
+                    </tr>
+                    <tr>
+                        <td>Nice Camera</td>
+                        <td>Really good bla bla balb lfkjaghjkh</td>
+                        <td><img src="images/prototype/zero beating the shit out of the psycho guy.gif" width="256" height="144" style="object-fit: cover;"></td>
+                    </tr>
+                </table>
+            </div>
         </div>
     </section>
 
