--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Ubuntu+Mono&display=swap" rel="stylesheet"> 
 </head>
 <body>
-    <div class = "main-container" style="background-color: none;">
+    <div class = "main-container">
         <div id = "about-wrapper">
             <section class = "intro">
-                <h1>Hi!</h1>
-                <h4>Bunch of stuff bunch of stuff bunch of stuff bunch of stuff</h4>
+                <div id="intro-text">
+                    <h1>Hi!</h1>
+                    <h4>Bunch of stuff bunch of stuff bunch of stuff bunch of stuffBunch of stuff bunch of stuffBunch of stuff bunch of stuffBunch of stuff bunch of stuffBunch of stuff bunch of stuffBunch of stuff bunch of stuffBunch of stuff bunch of stuff</h4>
+                </div>
             </section>
             <section class = "projects">
                 <h1>Projects</h1>
@@ -29,16 +31,25 @@
                     <div class = "project">
                         <a href="GameDescriptionPage.html">
                             <img src="images/prototype/Epic.png">
+                            <div class = "overlay">
+                                <h3>Game Name</h3>
+                            </div>
                         </a>
                     </div>
                     <div class = "project">
                         <a href="GameDescriptionPage.html">
                             <img src="images/prototype/Epic.png">
+                            <div class = "overlay">
+                                <h3>Game Name</h3>
+                            </div>
                         </a>
                     </div>
                     <div class = "project">
                         <a href="GameDescriptionPage.html">
                             <img src="images/prototype/Epic.png">
+                            <div class = "overlay">
+                                <h3>Game Name</h3>
+                            </div>
                         </a>
                     </div>
                 </div>
