--- a/index.html
+++ b/index.html
@@ -21,34 +21,42 @@
                 <h1>Projects</h1>
                 <div id = "portfolio">
                     <div class = "project">
-                        <a href="GameDescriptionPage.html">
+                        <a href="projects/03D.html">
                             <img src="images/prototype/Epic.png" />
                             <div class = "overlay">
-                                <h3>Game Name</h3>
+                                <h3>03D</h3>
                             </div>
                         </a>
                     </div>
                     <div class = "project">
-                        <a href="GameDescriptionPage.html">
+                        <a href="projects/rainee.html">
                             <img src="images/prototype/Epic.png">
                             <div class = "overlay">
-                                <h3>Game Name</h3>
+                                <h3>Rainee and the Magical Plant</h3>
                             </div>
                         </a>
                     </div>
                     <div class = "project">
-                        <a href="GameDescriptionPage.html">
+                        <a href="projects/spaceRings.html">
                             <img src="images/prototype/Epic.png">
                             <div class = "overlay">
-                                <h3>Game Name</h3>
+                                <h3>Space Rings</h3>
                             </div>
                         </a>
                     </div>
                     <div class = "project">
-                        <a href="GameDescriptionPage.html">
+                        <a href="projects/Base Dolphin.html">
                             <img src="images/prototype/Epic.png">
                             <div class = "overlay">
-                                <h3>Game Name</h3>
+                                <h3>Base Dolphin</h3>
+                            </div>
+                        </a>
+                    </div>
+                    <div class = "project">
+                        <a href="projects/desertPenguin.html">
+                            <img src="images/prototype/Epic.png">
+                            <div class = "overlay">
+                                <h3>Desert Penguin</h3>
                             </div>
                         </a>
                     </div>
