--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <h1>Projects</h1>
                 <div id = "portfolio">
                     <div class = "project">
-                        <a href="projects/03D.html">
+                        <a href="projects/03D/03D.html">
                             <img src="images/prototype/Epic.png" />
                             <div class = "overlay">
                                 <h3>03D</h3>
@@ -29,32 +29,32 @@
                         </a>
                     </div>
                     <div class = "project">
-                        <a href="projects/rainee.html">
-                            <img src="images/prototype/Epic.png">
+                        <a href="projects/Rainee/rainee.html">
+                            <img src="projects/Rainee/Images/raine.png">
                             <div class = "overlay">
                                 <h3>Rainee and the Magical Plant</h3>
                             </div>
                         </a>
                     </div>
                     <div class = "project">
-                        <a href="projects/spaceRings.html">
-                            <img src="images/prototype/Epic.png">
+                        <a href="projects/SpaceRings/spaceRings.html">
+                            <img src="projects/SpaceRings/Images/Ring-Sun-Rotor.png">
                             <div class = "overlay">
                                 <h3>Space Rings</h3>
                             </div>
                         </a>
                     </div>
                     <div class = "project">
-                        <a href="projects/Base Dolphin.html">
-                            <img src="images/prototype/Epic.png">
+                        <a href="projects/Base Dolphin/Base Dolphin.html">
+                            <img src="projects/Base Dolphin/Images/base dolphin bg.png">
                             <div class = "overlay">
                                 <h3>Base Dolphin</h3>
                             </div>
                         </a>
                     </div>
                     <div class = "project">
-                        <a href="projects/desertPenguin.html">
-                            <img src="images/prototype/Epic.png">
+                        <a href="projects/DesertPenguin/desertPenguin.html">
+                            <img src="projects/DesertPenguin/Images/vlcsnap-2022-01-18-11h49m40s797.png">
                             <div class = "overlay">
                                 <h3>Desert Penguin</h3>
                             </div>
