--- a/projects/Base Dolphin/Base Dolphin.html
+++ b/projects/Base Dolphin/Base Dolphin.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Base Dolphin</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" />
-	<link rel="stylesheet" type="text/css" href="../style/styles.css">
+	<link rel="stylesheet" type="text/css" href="../../style/styles.css">
 
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Ubuntu+Mono&display=swap" rel="stylesheet"> 
@@ -43,7 +43,7 @@
                 <div class = "description">
                     <div class = "one-liner">
                         <p>
-                            Base Dolphin is a 3D audio only shooter game where the player has to detect the location of targets by listening to the radar sounds, and aim and shoot them down. This game was a submission for the 'Game for Blind Gamers' Game Jam.
+                            Base Dolphin is a 3D audio only shooter game where the player has to detect the location of targets by listening to the Radar which plays a notification sound panned to the direction of submarines, to aim and shoot them down. This game was a submission for the 'Game for Blind Gamers' Game Jam.
                         </p>
                     </div>
                     <p>&nbsp</p>
@@ -70,7 +70,7 @@
                         </table>
                         <p>&nbsp;</p>
                         <p>Assests used:</p>
-                        <p>UI Accessibility Plugin: for UI navigation and Text-to-speech</p>
+                        <p><a href="https://assetstore.unity.com/packages/tools/gui/ui-accessibility-plugin-uap-87935" style="color: #FF5D73;">UI Accessibility Plugin</a> : for UI navigation and Text-to-speech</p>
                     </div>
                 </div>
             </section>
