--- a/projects/DesertPenguin/desertPenguin.html
+++ b/projects/DesertPenguin/desertPenguin.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Desert Penguin</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" />
-	<link rel="stylesheet" type="text/css" href="../style/styles.css">
+	<link rel="stylesheet" type="text/css" href="../../style/styles.css">
 
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Ubuntu+Mono&display=swap" rel="stylesheet"> 
@@ -40,6 +40,7 @@
                     <img src="Images/bomb.gif" ">
                     <img src="Images/dig360.gif" >
                     <img src="Images/headblock.gif" >
+                    <img src="Images/fireboots.gif">
                 </div>
                 <div class = "description">
                     <div class = "one-liner">
@@ -65,7 +66,7 @@
                                 <td>All the sounds were samples from freesound.org and were slightly edited on fl studio. Design. UI.</td>
                             </tr>
                         </table>
-                        <p>Assets used: Aeroplane sprite.</p>
+                        <p>Art Assets used: Aeroplane sprite and Stars on head animation.</p>
                     </div>
                 </div>
             </section>
