--- a/projects/Rainee/rainee.html
+++ b/projects/Rainee/rainee.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Rainee and the Magical Plant</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" />
-	<link rel="stylesheet" type="text/css" href="../style/styles.css">
+	<link rel="stylesheet" type="text/css" href="../../style/styles.css">
 
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Ubuntu+Mono&display=swap" rel="stylesheet"> 
@@ -11,7 +11,7 @@
 <body>
     <section class = "nav">
         <div class = "back-button">
-            <a href="../index.html">
+            <a href="../../index.html">
                 <h3><&nbsp;&nbsp;Go Back</h3>
             </a>
         </div>
@@ -37,12 +37,14 @@
                     </iframe> 
                 </div>
                 <div class = "screenshots">
-                    <img src="../images/prototype/Inkie.png" ">
-                    <img src="../images/prototype/Epic.png" >
+                    <img src="Images/MenuScreen.png" ">
+                    <img src="Images/raine.png" >
+                    <img src="Images/kids.png" >
+                    <img src="Images/crows.png" >
                 </div>
                 <div class = "description">
                     <div class = "one-liner">
-                        <p>This is a 2-D platformer game about a girl trying to find the proper planting place for a magic plant. It consists of four levels, the first and the last being for the plot, and the second and third levels are puzzle and parkour level respectively. This game was our two member team's entry for the GDN game jam.
+                        <p>Rainee and the Magical Plant is a 2-D platformer game about a girl trying to find the proper planting place for a magic plant. It consists of four levels, the first and the last being for the plot, and the second and third levels are puzzle and parkour level respectively. This game was our two member team's entry for the GDN game jam.
                         </p>
                     </div>
                     <p>&nbsp</p>
@@ -67,6 +69,10 @@
                                 <td>All the sounds were samples from freesound.org and were slightly edited on fl studio. Skeletal animations.</td>
                             </tr>
                         </table>
+                        <p>&nbsp;</p>
+                        <p>Credits:</p>
+                        <p>abbygee#1028 : Music, Art, Story, Design </p>
+                        <p>Art assets used : <a style="color: #FF5D73" href="https://www.kenney.nl/assets?q=2d">Kenney's Free Assests</a></p>
                     </div>
                 </div>
             </section>
