--- a/projects/SpaceRings/spaceRings.html
+++ b/projects/SpaceRings/spaceRings.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Space Rings</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" />
-	<link rel="stylesheet" type="text/css" href="../style/styles.css">
+	<link rel="stylesheet" type="text/css" href="../../style/styles.css">
 
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Ubuntu+Mono&display=swap" rel="stylesheet"> 
@@ -11,7 +11,7 @@
 <body>
     <section class = "nav">
         <div class = "back-button">
-            <a href="../index.html">
+            <a href="../../index.html">
                 <h3><&nbsp;&nbsp;Go Back</h3>
             </a>
         </div>
@@ -37,8 +37,7 @@
                     </iframe> 
                 </div>
                 <div class = "screenshots">
-                    <img src="../images/prototype/Inkie.png" ">
-                    <img src="../images/prototype/Epic.png" >
+                    <img src="Images/Ring-Sun-Rotor.png" ">
                 </div>
                 <div class = "description">
                     <div class = "one-liner">
