--- a/projects/SpaceRings/spaceRings.html
+++ b/projects/SpaceRings/spaceRings.html
@@ -32,8 +32,8 @@
             <section class = "game-content">
                 <div class = "gameplay">
                     <iframe 
-                    src="https://www.youtube.com/embed/GGpRrQQkJOQ"
-                    frameborder="0" width="100%" height="360px">
+                    src="https://www.youtube.com/embed/Z3VLcxPvwas"
+                    frameborder="0" width="100%" height="360px" allowfullscreen>
                     </iframe> 
                 </div>
                 <div class = "screenshots">
