--- a/projects/Base Dolphin/Base Dolphin.html
+++ b/projects/Base Dolphin/Base Dolphin.html
@@ -37,13 +37,13 @@
                     </iframe> 
                 </div>
                 <div class = "screenshots">
-                    <img src="Images/Screenshot from 2022-01-18 12-03-17.png    " ">
+                    <img src="Images/Screenshot from 2022-01-18 12-03-17.png" ">
                     <img src="Images/base dolphin poster.png" >
                 </div>
                 <div class = "description">
                     <div class = "one-liner">
                         <p>
-                            Base Dolphin is a 3D audio only shooter game where the player has to detect the location of targets by listening to the Radar which plays a notification sound panned to the direction of submarines, to aim and shoot them down. This game was a submission for the 'Game for Blind Gamers' Game Jam.
+                            Base Dolphin is a 3D audio only shooter game where the player has to detect the location of targets using the radar which plays a notification sound panned to the direction of targets, to aim and shoot them down. This game was a submission for the 'Game for Blind Gamers' Game Jam.
                         </p>
                     </div>
                     <p>&nbsp</p>
@@ -57,11 +57,11 @@
                             </tr>
                             <tr>
                                 <td>Program</td>
-                                <td>Programmed for entire game using Unity engine.</td>
+                                <td>Programmed for entire game using Unity engine. Notable Sections: Target (Submarines) spawner and path, radar, audio only sensitivity tester/adjuster.</td>
                             </tr>
                             <tr>
                                 <td>Sounds</td>
-                                <td>All the sound effects were made using various samples on fl studio. Sounds for announcements were made using sampled text-to-speech.</td>
+                                <td>All the sound effects were made using various samples and virtual instruments on fl studio. Sounds for announcements were made using sampled text-to-speech.</td>
                             </tr>
                             <tr>
                                 <td>Other</td>
