--- a/projects/Rainee/rainee.html
+++ b/projects/Rainee/rainee.html
@@ -58,7 +58,7 @@
                             </tr>
                             <tr>
                                 <td>Program</td>
-                                <td>Programmed for entire game using Unity engine.</td>
+                                <td>Programmed for entire game using Unity engine. Notable Sections: Player Movement, Multi Scene Workflow, Dialogue management,UI Management, Sound Management</td>
                             </tr>
                             <tr>
                                 <td>Design</td>
