--- a/projects/SpaceRings/spaceRings.html
+++ b/projects/SpaceRings/spaceRings.html
@@ -55,7 +55,7 @@
                             </tr>
                             <tr>
                                 <td>Program</td>
-                                <td>Programmed for entire game using Unity engine.</td>
+                                <td>Programmed for entire game using Unity engine. Notable Sections: Space Ship Movement/Controller, Level Spawner, Obstacle Mechanics.</td>
                             </tr>
                             <tr>
                                 <td>Sounds and Music</td>
