--- a/projects/03D/03D.html
+++ b/projects/03D/03D.html
@@ -3,7 +3,7 @@
 <head>
 	<title>03D</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" />
-	<link rel="stylesheet" type="text/css" href="../style/styles.css">
+	<link rel="stylesheet" type="text/css" href="../../style/styles.css">
 
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Ubuntu+Mono&display=swap" rel="stylesheet"> 
@@ -11,7 +11,7 @@
 <body>
     <section class = "nav">
         <div class = "back-button">
-            <a href="../index.html">
+            <a href="../../index.html">
                 <h3><&nbsp;&nbsp;Go Back</h3>
             </a>
         </div>
@@ -37,12 +37,13 @@
                     </iframe> 
                 </div>
                 <div class = "screenshots">
-                    <img src="../images/prototype/Inkie.png" ">
-                    <img src="../images/prototype/Epic.png" >
+                    <img src="../../images/prototype/Inkie.png" ">
+                    <img src="../../images/prototype/Epic.png" >
                 </div>
                 <div class = "description">
                     <div class = "one-liner">
-                        <p>03D is an ongoing project, and is an FPP action platformer. The main idea for this project was to recreate mechanics of the game Katana Zero in a 3D environment.
+                        <p>03D is a first person perspective action platformer project, which is based on the idea of recreating mechanics of one of my most favorite games, Katana Zero in a 3D environment.
+
                         </p>
                     </div>
                     <p>&nbsp</p>
@@ -56,11 +57,11 @@
                             </tr>
                             <tr>
                                 <td>Program</td>
-                                <td>Programmed using Unity engine for mechanics such as player movement, combat, enemy AI (state machine).</td>
+                                <td>Programmed for the entire project using Unity Game Engine. Notable sections : Player Movement, Enemy AI (State Machine), Combat.</td>
                             </tr>
                             <tr>
                                 <td>Level Design</td>
-                                <td>Designed and created level, using probuilder</td>
+                                <td>Designed and created level, using unity's probuilder</td>
                             </tr>
                             <tr>
                                 <td>Other</td>
