added other page
yes

--- a/projects/Rainee/rainee.html
+++ b/projects/Rainee/rainee.html
@@ -72,7 +72,7 @@
                         <p>&nbsp;</p>
                         <p>Credits:</p>
                         <p>abbygee#1028 : Music, Art, Story, Design </p>
-                        <p>Art assets used : <a style="color: #FF5D73" href="https://www.kenney.nl/assets?q=2d">Kenney's Free Assests</a></p>
+                        <p>Art assets used : <a style="color: #FD3777" href="https://www.kenney.nl/assets?q=2d">Kenney's Free Assests</a></p>
                     </div>
                 </div>
             </section>
