other button in index
yes

--- a/index.html
+++ b/index.html
@@ -60,6 +60,14 @@
                             </div>
                         </a>
                     </div>
+                    <div class = "project">
+                        <a href="projects/Other/other.html">
+                            <img src="projects/Other/images/Screenshot (37).png" />
+                            <div class = "overlay">
+                                <h3 style="font-size: 38px;">Small/Non Game Programming related work</h3>
+                            </div>
+                        </a>
+                    </div>
                 </div>
             </section>
         </div>
