--- a/GameDescriptionPage.html
+++ b/GameDescriptionPage.html
@@ -5,8 +5,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" />
 	<link rel="stylesheet" type="text/css" href="style/styles.css">
 
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet"> 
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Ubuntu+Mono&display=swap" rel="stylesheet"> 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Roboto+Mono&family=Ubuntu+Mono&display=swap" rel="stylesheet">  
 </head>
 <body>
     <section class = "nav">
@@ -42,7 +43,7 @@
                 </div>
                 <div class = "description">
                     <div class = "one-liner">
-                        <p>Game Not too good sed</p>
+                        <p>Rainee and the Magical Plant is a 2-D platformer game about a girl trying to find the proper planting place for a magic plant. It consists of four levels, the first and the last being for the plot, and the second and third levels are puzzle and parkour level respectively. This game was our two member team's entry for the GDN game jam.</p>
                     </div>
                     <p>&nbsp</p>
                     <div class = "features">
