--- a/projects/Other/other.html
+++ b/projects/Other/other.html
@@ -4,9 +4,9 @@
 	<title>Other</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" />
 	<link rel="stylesheet" type="text/css" href="../../style/styles.css">
-
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet"> 
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Ubuntu+Mono&display=swap" rel="stylesheet"> 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Roboto+Mono&family=Ubuntu+Mono&display=swap" rel="stylesheet"> 
 </head>
 <body>
     <section class = "nav">
@@ -18,7 +18,7 @@
         
     </section>
     <div id = "except-nav">
-        <div class = "main-container">
+        <div class = "main-container" style="padding-bottom: 4em;">
             <section class = "title">
                 <div class = "name">
                     <h1>Small/Non Game Programming related work</h1>
