bg-image(in-progress)
yes

--- a/projects/SpaceRings/spaceRings.html
+++ b/projects/SpaceRings/spaceRings.html
@@ -18,6 +18,8 @@
         </div>
         
     </section>
+    <div id = "bg-image">
+    </div>
     <div id = "except-nav">
         <div class = "main-container">
             <section class = "title">
