bg-image added to space rings
yes

--- a/projects/SpaceRings/spaceRings.html
+++ b/projects/SpaceRings/spaceRings.html
@@ -18,9 +18,8 @@
         </div>
         
     </section>
-    <div id = "bg-image">
-    </div>
     <div id = "except-nav">
+        <div id="bg-image" style="background-image: url(Images/Ring-Sun-Rotor.png);"></div>
         <div class = "main-container">
             <section class = "title">
                 <div class = "name">
