--- a/projects/03D/03D.html
+++ b/projects/03D/03D.html
@@ -19,6 +19,7 @@
         
     </section>
     <div id = "except-nav">
+        <div id="bg-image" style="background-image: url(../../images/prototype/Inkie.png);"></div>
         <div class = "main-container">
             <section class = "title">
                 <div class = "name">
@@ -69,12 +70,12 @@
                                 <td>Cel shader for player and enemy (using shadergraph).</td>
                             </tr>
                         </table>
-                        <p>&nbsp</p>
+                    </div>
+                    <p>&nbsp</p>
                         <p>Assets used:</p>
                         <p>Enemy Model and Animations: mixamo</p>
                         <p>Sword</p>
                         <p>Textures for Ceiling and Floor</p>
-                    </div>
                 </div>
             </section>
         </div>
