--- a/projects/DesertPenguin/desertPenguin.html
+++ b/projects/DesertPenguin/desertPenguin.html
@@ -19,6 +19,7 @@
         
     </section>
     <div id = "except-nav">
+        <div id="bg-image" style="background-image: url(Images/vlcsnap-2022-01-18-11h49m40s797.png);"></div>
         <div class = "main-container">
             <section class = "title">
                 <div class = "name">
@@ -67,8 +68,8 @@
                                 <td>All the sounds were samples from freesound.org and were slightly edited on fl studio. Design. UI.</td>
                             </tr>
                         </table>
-                        <p>Art Assets used: Aeroplane sprite and Stars on head animation.</p>
                     </div>
+                    <p>Art Assets used: Aeroplane sprite and Stars on head animation.</p>
                 </div>
             </section>
         </div>
