--- a/projects/Rainee/rainee.html
+++ b/projects/Rainee/rainee.html
@@ -18,6 +18,7 @@
         
     </section>
     <div id = "except-nav">
+        <div id="bg-image" style="background-image: url(Images/MenuScreen.png);"></div>
         <div class = "main-container">
             <section class = "title">
                 <div class = "name">
@@ -63,11 +64,11 @@
                                 <td>All the sounds were samples from freesound.org and were slightly edited on fl studio. Skeletal animations.</td>
                             </tr>
                         </table>
-                        <p>&nbsp;</p>
+                    </div>
+                    <p>&nbsp;</p>
                         <p>Credits:</p>
                         <p>abbygee#1028 : Music, Art, Story, Design </p>
-                        <p>Art assets used : <a style="color: #FD3777" href="https://www.kenney.nl/assets?q=2d">Kenney's Free Assests</a></p>
-                    </div>
+                        <p>Art assets used : <a href="https://www.kenney.nl/assets?q=2d">Kenney's Free Assests</a></p>
                 </div>
                 <div class = "screenshots">
                     <img src="Images/MenuScreen.png" ">
