--- a/projects/SpaceRings/spaceRings.html
+++ b/projects/SpaceRings/spaceRings.html
@@ -61,7 +61,7 @@
                             </tr>
                             <tr>
                                 <td>Sounds and Music</td>
-                                <td>All the sounds were made using samples or virtual instruments on fl studio. The same tool was used to produce music for the game.</td>
+                                <td>All the sounds were made using samples or virtual instruments on FL Studio. The same tool was used to produce music for the game.</td>
                             </tr>
                             <tr>
                                 <td>Models</td>
