--- a/projects/Base Dolphin/Base Dolphin.html
+++ b/projects/Base Dolphin/Base Dolphin.html
@@ -19,6 +19,7 @@
         
     </section>
     <div id = "except-nav">
+        <div id="bg-image" style="background-image: url(Images/base\ dolphin\ bg.png);"></div>
         <div class = "main-container">
             <section class = "title">
                 <div class = "name">
@@ -69,10 +70,10 @@
                                 <td>Design.</td>
                             </tr>
                         </table>
-                        <p>&nbsp;</p>
-                        <p>Assests used:</p>
-                        <p><a href="https://assetstore.unity.com/packages/tools/gui/ui-accessibility-plugin-uap-87935" style="color: #FF5D73;">UI Accessibility Plugin</a> : for UI navigation and Text-to-speech</p>
                     </div>
+                    <p>&nbsp;</p>
+                    <p>Assests used:</p>
+                    <p><a href="https://assetstore.unity.com/packages/tools/gui/ui-accessibility-plugin-uap-87935">UI Accessibility Plugin</a> : for UI navigation and Text-to-speech</p>
                 </div>
             </section>
         </div>
