--- a/projects/03D/03D.html
+++ b/projects/03D/03D.html
@@ -19,7 +19,7 @@
         
     </section>
     <div id = "except-nav">
-        <div id="bg-image" style="background-image: url(../../images/prototype/Inkie.png);"></div>
+        <div id="bg-image" style="background-image: url(Images/hallway.png);"></div>
         <div class = "main-container">
             <section class = "title">
                 <div class = "name">
@@ -34,13 +34,14 @@
             <section class = "game-content">
                 <div class = "gameplay">
                     <iframe 
-                    src="https://www.youtube.com/embed/1nSqfZ7gjIo"
+                    src="https://www.youtube.com/embed/dC9TyvtuHIo"
                     frameborder="0" width="100%" height="360px">
                     </iframe> 
                 </div>
                 <div class = "screenshots">
-                    <img src="../../images/prototype/Inkie.png" ">
-                    <img src="../../images/prototype/Epic.png" >
+                    <img src="Images/hallway.png">
+                    <img src="Images/kronos.png" >
+                    <img src="Images/blood splatter.png" >
                 </div>
                 <div class = "description">
                     <div class = "one-liner">
