--- a/projects/Other/other.html
+++ b/projects/Other/other.html
@@ -18,6 +18,7 @@
         
     </section>
     <div id = "except-nav">
+        <div id="bg-image" style="background-image: url(images/Screenshot\ \(37\).png);"></div>
         <div class = "main-container" style="padding-bottom: 4em;">
             <section class = "title">
                 <div class = "name">
@@ -27,9 +28,9 @@
             <div id = "other-content">
                 <h2>Dots and Boxes
                 </h2>
-                <p>The project, made for AI vs AI battle with a friend, is based on a pen paper game.
-                The game starts with an empty grid of dots. Two players take turns adding a single horizontal or vertical line between two disconnected adjacent dots. The player who completes the fourth side of a box earns one point and takes another turn. The game ends when the grid is full.
-                This game consists of single player mode in which the player plays against the AI.
+                <p>The project, made for a casual AI vs AI battle with a friend, is recreation of a pen paper game.
+                The game starts with an empty grid of dots. Two players take turns adding a single horizontal or vertical line between two disconnected adjacent, non-diagonal dots. When all the dots are connected, the player with most number of points wins.
+                This game consists of single player mode in which the player plays against Computer.
                 </p>
                 <div class="screenshots">
                     <img src="images/Screenshot (199).png">
