--- a/projects/Rainee/rainee.html
+++ b/projects/Rainee/rainee.html
@@ -18,7 +18,7 @@
         
     </section>
     <div id = "except-nav">
-        <div id="bg-image" style="background-image: url(Images/MenuScreen.png);"></div>
+        <div id="bg-image" style="background-image: url(Images/vlcsnap-2022-01-19-09h37m37s178.png);"></div>
         <div class = "main-container">
             <section class = "title">
                 <div class = "name">
