--- a/index.html
+++ b/index.html
@@ -16,13 +16,30 @@
                     <h1>Hi!</h1>
                     <h4>Bunch of stuff bunch of stuff bunch of stuff bunch of stuffBunch of stuff bunch of stuffBunch of stuff bunch of stuffBunch of stuff bunch of stuffBunch of stuff bunch of stuffBunch of stuff bunch of stuffBunch of stuff bunch of stuff</h4>
                 </div>
+                <div style="font-size: 0px;">
+                    <div class = "link">
+                        <a href="https://github.com/N-16" target="_blank">
+                            <h4>GitHub</h4>
+                        </a>
+                    </div>
+                    <div class = "link">
+                        <a href="https://nsix.itch.io/" target="_blank">
+                            <h4>itch.io</h4>
+                        </a>
+                    </div>
+                    <div class = "link">
+                        <a href="Resume.pdf" target="_blank">
+                            <h4>Resume</h4>
+                        </a>
+                    </div>
+                </div>
             </section>
             <section class = "projects">
                 <h1>Projects</h1>
                 <div id = "portfolio">
                     <div class = "project">
                         <a href="projects/03D/03D.html">
-                            <img src="images/prototype/Epic.png" />
+                            <img src="projects/03D/Images/hallway.png" />
                             <div class = "overlay">
                                 <h3>03D</h3>
                             </div>
