compressed gifs added now actually + added about description
yes

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <section class = "intro">
                 <div id="intro-text">
                     <h1>Hi!</h1>
-                    <h4>Bunch of stuff bunch of stuff bunch of stuff bunch of stuffBunch of stuff bunch of stuffBunch of stuff bunch of stuffBunch of stuff bunch of stuffBunch of stuff bunch of stuffBunch of stuff bunch of stuffBunch of stuff bunch of stuff</h4>
+                    <h4>My name is Kushagra, I make games, and I am currently studying Computer Science Engineering in India. Growing up playing games in my family computer, I have been interested in developing them soon after I was introduced to programming in school. I began learning programming for games using LÖVE 2D engine in Lua, and later switched to Unity. </h4>
                 </div>
                 <div style="font-size: 0px;">
                     <div class = "link">
