Fix for chrome + edited about
yes

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <div id = "about-wrapper">
             <section class = "intro">
                 <div id="intro-text">
-                    <h1>Hi!</h1>
-                    <h4>My name is Kushagra, I make games, and I am currently studying Computer Science Engineering in India. Growing up playing games in my family computer, I have been interested in developing them soon after I was introduced to programming in school. I began learning programming for games using LÖVE 2D engine in Lua, and later switched to Unity. </h4>
+                    <h1>About</h1>
+                    <h4>My name is Kushagra, I make games, and I am currently studying Computer Science Engineering in India. Growing up playing games in my Windows 98 family computer, I built interest in developing them soon after I was introduced to programming in school. After which, I began learning programming for games using LÖVE 2D engine in Lua, and later switched to Unity.  </h4>
                 </div>
                 <div style="font-size: 0px;">
                     <div class = "link">
