--- a/projects/03D/03D.html
+++ b/projects/03D/03D.html
@@ -19,7 +19,7 @@
         
     </section>
     <div id = "except-nav">
-        <div id="bg-image" style="background-image: url(Images/hallway.png);"></div>
+        <div id="bg-image" style="background-image: url(Images/kronos.png);"></div>
         <div class = "main-container">
             <section class = "title">
                 <div class = "name">
@@ -34,14 +34,15 @@
             <section class = "game-content">
                 <div class = "gameplay">
                     <iframe 
-                    src="https://www.youtube.com/embed/dC9TyvtuHIo"
+                    src="https://www.youtube.com/embed/bem7EoMw8RA"
                     frameborder="0" width="100%" height="360px">
                     </iframe> 
                 </div>
                 <div class = "screenshots">
                     <img src="Images/hallway.png">
                     <img src="Images/kronos.png" >
-                    <img src="Images/blood splatter.png" >
+                    <img src="Images/nme.png">
+                    <img src="Images/blood splatter.png">
                 </div>
                 <div class = "description">
                     <div class = "one-liner">
@@ -60,7 +61,7 @@
                             </tr>
                             <tr>
                                 <td>Program</td>
-                                <td>Programmed for the entire project using Unity Game Engine. Notable sections : Player Movement, Enemy AI (State Machine), Combat.</td>
+                                <td>Programmed for the entire project using Unity Game Engine. Notable sections : Player Mechanics/Movement, Enemy AI (State Machine), Combat.</td>
                             </tr>
                             <tr>
                                 <td>Level Design</td>
@@ -68,7 +69,7 @@
                             </tr>
                             <tr>
                                 <td>Other</td>
-                                <td>Cel shader for player and enemy (using shadergraph).</td>
+                                <td>Cel shader for player and enemy (using shadergraph).Sound Production.</td>
                             </tr>
                         </table>
                     </div>
@@ -77,6 +78,7 @@
                         <p>Enemy Model and Animations: mixamo</p>
                         <p>Sword</p>
                         <p>Textures for Ceiling and Floor</p>
+                        <p>Footstep sounds</p>
                 </div>
             </section>
         </div>
