--- a/projects/Base Dolphin/Base Dolphin.html
+++ b/projects/Base Dolphin/Base Dolphin.html
@@ -34,7 +34,7 @@
             <section class = "game-content">
                 <div class = "gameplay">
                     <iframe 
-                    src="https://www.youtube.com/embed/M0ZSN7sxuJI"
+                    src="https://www.youtube.com/embed/1COrQg8zJ2Y"
                     frameborder="0" width="100%" height="360px" allowfullscreen>
                     </iframe> 
                 </div>
@@ -45,7 +45,7 @@
                 <div class = "description">
                     <div class = "one-liner">
                         <p>
-                            Base Dolphin is a 3D audio only shooter game where the player has to detect the location of targets using the radar which plays a notification sound panned to the direction of targets, to aim and shoot them down. This game was a submission for the 'Game for Blind Gamers' Game Jam.
+                            Base Dolphin is a 3D audio only shooter game where the player has to detect the location of targets using the radar, which periodically plays notification sounds panned to the direction of targets, to aim and shoot them down. This game was my submission for the 'Game for Blind Gamers' Game Jam.
                         </p>
                     </div>
                     <p>&nbsp</p>
