--- a/projects/SpaceRings/spaceRings.html
+++ b/projects/SpaceRings/spaceRings.html
@@ -39,7 +39,8 @@
                     </iframe> 
                 </div>
                 <div class = "screenshots">
-                    <img src="Images/Ring-Sun-Rotor.png" ">
+                    <img src="Images/Ring-Sun-Rotor.png" >
+                    <img src="Images/Ring and Sucker.png" >
                 </div>
                 <div class = "description">
                     <div class = "one-liner">
