--- a/projects/DesertPenguin/desertPenguin.html
+++ b/projects/DesertPenguin/desertPenguin.html
@@ -46,7 +46,7 @@
                 </div>
                 <div class = "description">
                     <div class = "one-liner">
-                        <p>Desert Penguin is a 2D endless runner game, in which the player has to dodge bombs and arrow bombs spawned by an aeroplane and survive. The aeroplane may also spawn 'glitches' that may add to the chaos of the game. This game was my submission for the 'HackerEarth's Game Jam 1.0'.
+                        <p>Desert Penguin is a 2D endless runner game, in which the player (the penguin) has to dodge bombs and arrow bombs spawned by an aeroplane while moving forward, to avoid dark zone and survive. The aeroplane may also spawn 'glitches' (Headblock: Spawns a block on random jumps, Fireboots: Reduces health when player walks over covered ground, Dig: Random Jumps towards opposite direction) that adds to the chaos of the game. This game was my submission for the 'HackerEarth's Game Jam 1.0'.
 
                         </p>
                     </div>
@@ -61,7 +61,7 @@
                             </tr>
                             <tr>
                                 <td>Program</td>
-                                <td>Programmed for entire game using Unity engine.</td>
+                                <td>Programmed for entire game using Unity engine. Notable Sections: Player Mechanics, Glitch Mechanics, Bomb Spawner/Mechanics, Level Generator</td>
                             </tr>
                             <tr>
                                 <td>Other</td>
