--- a/projects/Rainee/rainee.html
+++ b/projects/Rainee/rainee.html
@@ -39,7 +39,7 @@
                 </div>
                 <div class = "description">
                     <div class = "one-liner">
-                        <p>Rainee and the Magical Plant is a 2-D platformer game about a girl trying to find the proper planting place for a magic plant. It consists of four levels, the first and the last being for the plot, and the second and third levels are puzzle and parkour level respectively. This game was our two member team's entry for the GDN game jam.
+                        <p>Rainee and the Magical Plant is a platformer game about a girl trying to find the proper planting place for a magic plant. It consists of four levels, the first and the last being for the plot, and the second and third levels are puzzle and parkour level respectively. This game was our two member team's entry for the GDN Game Jam 2021.
                         </p>
                     </div>
                     <p>&nbsp</p>
