--- a/projects/03D/03D.html
+++ b/projects/03D/03D.html
@@ -35,7 +35,7 @@
                 <div class = "gameplay">
                     <iframe 
                     src="https://www.youtube.com/embed/bem7EoMw8RA"
-                    frameborder="0" width="100%" height="360px">
+                    frameborder="0" width="100%" height="360px" allowfullscreen>
                     </iframe> 
                 </div>
                 <div class = "screenshots">
